# agent-container-pack

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  main.py  mcp.json  pyproject.toml
.claude/: mcp.json
.devcontainer/: .env.example  Dockerfile  devcontainer.json  init-firewall.sh  mcp.json
docs/plans/: 2026-01-02-agentpack-v0.1-design.md  2026-01-02-agentpack-v0.1-impl.md
src/agent_container_pack/: __init__.py  __main__.py  cli.py
src/agent_container_pack/devcontainer/: __init__.py  firewall.py
src/agent_container_pack/generators/: __init__.py  codex_config.py  markdown.py  settings.py
src/agent_container_pack/init/: __init__.py  template.py
src/agent_container_pack/manifest/: __init__.py  loader.py
src/agent_container_pack/stack/: __init__.py  detector.py
src/agent_container_pack/validators/: __init__.py  env.py  skills.py
src/agentpack/: __init__.py  __main__.py  cli.py
src/agentpack/devcontainer/: __init__.py  firewall.py
src/agentpack/generators/: __init__.py  codex_config.py  markdown.py  settings.py
src/agentpack/init/: __init__.py  template.py
src/agentpack/manifest/: __init__.py  loader.py  schema.py
src/agentpack/stack/: __init__.py  detector.py
src/agentpack/validators/: __init__.py  env.py  skills.py
tests/: __init__.py  conftest.py  test_cli_generate.py  test_devcontainer_firewall.py  test_generators_codex.py  test_generators_markdown.py  test_generators_settings.py  test_init_template.py  test_integration.py  test_manifest_loader.py  test_manifest_schema.py  test_stack_detector.py  test_validators_env.py  test_validators_skills.py
tests/__snapshots__/: test_generators_codex.ambr  test_generators_markdown.ambr  test_generators_settings.ambr
tests/fixtures/: full.yml  minimal.yml
