[project]
name = "agentpack"
version = "0.1.0"
description = "CLI tool for generating CLAUDE.md/AGENTS.md from agentpack.yml"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cyclopts>=4.4.3",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
]

[project.scripts]
agentpack = "agentpack.cli:app"

[dependency-groups]
dev = [
    "pre-commit",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff",
    "syrupy>=5.0.0",
    "ty",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentpack"]
